[package]
name = "pba-parachain-collator"
description = "Collator for the cumulusless parachain"
version = "0.1.0"
edition = "2018"
authors = ["PBA students"]

[[bin]]
name = "pba-collator"
path = "src/main.rs"

[dependencies]
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }
clap = { version = "4.0.9", features = ["derive"] }
futures = "0.3.21"
futures-timer = "3.0.2"
log = "0.4.17"

pba-pvf = { path = "../pvf" }

polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "master", features = ["rococo-native"] }
polkadot-node-primitives = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-node-subsystem = { git = "https://github.com/paritytech/polkadot", branch = "master" }

sc-cli = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "master" }
